--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "main": "index.js",
   "scripts": {
     "codestyle": "eslint src",
-    "travis": "npm run codestyle && npm test",
     "build": "webpack --progress --colors",
     "watch": "webpack-dev-server --progress --colors --open",
-    "start": "npm run watch",
-    "test": "karma start",
-    "cover": "istanbul cover _mocha -- test/*.js",
-    "prepare": "npm run travis"
+    "start": "npm run watch"
   },
   "author": "",
   "license": "MIT",
